# api-usage-analyzer

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  README.md
backend/src/: errors.rs  lib.rs  main.rs  websocket.rs
backend/src/config/: mod.rs  settings.rs
backend/src/controllers/: analytics_controller.rs  api_key_controller.rs  auth_controller.rs  mod.rs  prediction_controller.rs  usage_controller.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 20240101000000_initial.sql
backend/src/db/repositories/: mod.rs  usage_repository.rs  user_repository.rs
backend/src/jobs/: mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: alert.rs  api_key.rs  api_usage.rs  budget.rs  mod.rs  prediction.rs  user.rs
backend/src/routes/: api_key.rs  mod.rs
backend/src/services/: mod.rs  prediction_service.rs  usage_service.rs
backend/src/utils/: helpers.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/Auth/: Login.jsx  ProtectedRoute.jsx  Register.jsx
frontend/src/components/Charts/: CostChart.jsx  RequestChart.jsx  TokenChart.jsx
frontend/src/components/Dashboard/: Dashboard.jsx  PredictionPanel.jsx  StatsCard.jsx
frontend/src/components/Settings/: Settings.jsx
frontend/src/hooks/: useAPIData.js  usePredictions.js
frontend/src/services/: apiClient.js
frontend/src/store/: authStore.js
frontend/src/utils/: formatters.js
